--- a/src/Issues.css
+++ b/src/Issues.css
@@ -1,11 +1,11 @@
 
-.issue {
+/* .issue {
     padding: 20px;
     border: 1px solid black;
     background-color: bisque;
     width: 100px;
     height: 200px;
-}
+} */
 
 .issueList {
     display: grid;
@@ -22,3 +22,11 @@
     cursor: pointer;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
+
+#selectFilterIssue {
+    margin: 15px;
+    padding: 8px;
+}
+
+
+
