--- a/src/styles/Issues.css
+++ b/src/styles/Issues.css
@@ -1,15 +1,15 @@
 
 .issue {
-    padding: 20px;
     border: 1px solid black;
     background-color: bisque;
-    width: 100px;
-    height: 200px;
+    width: 100%;
+    height: 100%;
 }
 
 .issueList {
     display: grid;
-    grid-template-columns: repeat( auto-fit, minmax(150px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    height: 100%;
     gap: 10px;
     justify-items: center;
 }
