--- a/src/Issues.css
+++ b/src/Issues.css
@@ -18,15 +18,15 @@
     margin: 5% 10%
 }
 
-.issue:hover {
-    cursor: pointer;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
-
 #selectFilterIssue {
     margin: 15px;
     padding: 8px;
+    border: 1px solid black;
+    background-color: bisque;
+    border-radius: 10px;
 }
+
+
 
 
 
