#18 Added modal for each issue and general styling

--- a/src/styles/IssueCard.css
+++ b/src/styles/IssueCard.css
@@ -10,11 +10,15 @@
     width: 1fr;
     margin: 2px 2px;
     padding: 4px;
-    background-color: bisque;
+    background-color: #e5dbe2;
     border-radius: 15px;
     font-size: 14px;
 }
 
 .issueCard {
-    border: 1px solid #333;
+    border: 1px solid #37474F;
+    background-color: #fdfefe;
+    font-family: 'Montserrat';
 }
+
+
