--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
+
 .App {
   text-align: center;
-  height: 100%;
+  height: 100vh;
+  background-color: #dbe2e5;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
 }
