--- a/src/styles/Issues.css
+++ b/src/styles/Issues.css
@@ -13,9 +13,9 @@
 #selectFilterIssue {
     margin: 15px;
     padding: 8px;
-    border: 1px solid black;
-    background-color: bisque;
+    background-color: #37474F;
     border-radius: 10px;
+    color: white;
 }
 
 
