--- a/src/styles/IssueCard.css
+++ b/src/styles/IssueCard.css
@@ -19,6 +19,8 @@
     border: 1px solid #37474F;
     background-color: #fdfefe;
     font-family: 'Montserrat';
+    height: 100%;
+    width: 100%;
 }
 
 
