--- a/src/styles/Issues.css
+++ b/src/styles/Issues.css
@@ -1,3 +1,13 @@
+.issue {
+    height: 100%;
+    width: 100%;
+}
+
+.issue > div {
+    width: 100%;
+    height: 100%;
+}
+
 .issueList {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
