#25 added media queries for heights of the application

--- a/src/styles/ContentWrapper.css
+++ b/src/styles/ContentWrapper.css
@@ -36,3 +36,12 @@
         padding: 0.5em 0.25em;
     }
 }
+
+@media (max-width: 600px) and (max-height: 330px) {
+    .content-wrapper {
+        height: auto;
+    }
+    .content {
+        height: auto;
+    }
+  }
