--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -23,3 +23,18 @@ nav {
         cursor: pointer;
         background: black;
     }
+
+    @media (max-width: 600px) and (max-height: 600px) {
+      nav ul li {
+        font-size: 3vh;
+      }
+    }
+
+    @media (max-width: 600px) and (max-height: 330px) {
+      nav ul li {
+        font-size: 10px;
+      }
+      nav {
+        height: 46px;
+      }
+    }
