Changed font for issuecards, text sizes and minor color changes

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,13 +1,14 @@
 .header {
-    height: 10vh;
+    height: 75px;
     background-color: #37474F;
     border-bottom: 1px solid white;
 }
 
 .header h1 {
     text-align: center;
+    padding-top: 10px;
     margin: 0;
-    padding-top: 15px;
-    color: white;
-    font-weight: bold;
+    color: #dbe2e5;
+    font-weight: 500;
+    font-size: 45px;
 }
