--- a/src/styles/Issues.css
+++ b/src/styles/Issues.css
@@ -24,10 +24,9 @@
     margin: 15px;
     padding: 8px;
     background-color: #37474F;
-    border-radius: 10px;
     color: white;
+    font-family: 'Montserrat';
 }
-
 
 
 
