#24 Fixed so only one modal can appear at a time

--- a/src/styles/ContentWrapper.css
+++ b/src/styles/ContentWrapper.css
@@ -6,6 +6,11 @@
     overflow-y: auto;
     overflow-x: auto;
 }
+
+.content.modal {
+    top: '50%';
+    left: '90%';
+}
 .sidebar-wrapper {
     height: 100%;
     display: flex;
