#24 Connected IssueModal with context api

--- a/src/styles/IssueModal.css
+++ b/src/styles/IssueModal.css
@@ -18,8 +18,10 @@
     color: #37474F;
     text-align:center;
     transition: all 0.2s;
+    float: right;
 }
 
 .exitButton:hover{
     border-color: #37474F;
 }
+
