#19 Fix header styling

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,5 +1,6 @@
 .header {
-    height: 75px;
+    height: 10vh;
+    min-height: 75px;
     background-color: #37474F;
     border-bottom: 1px solid white;
 }
